contrib/python/oracledb/oracledb/impl/thick/odpi.pxd


    int dpiSodaColl_listIndexes(dpiSodaColl *coll, uint32_t flags,
            dpiStringList *lst) nogil

    int dpiSodaColl_release(dpiSodaColl *coll) nogil

    int dpiSodaColl_remove(dpiSodaColl *coll,
            const dpiSodaOperOptions *options, uint32_t flags,
            uint64_t *count) nogil

    int dpiSodaColl_replaceOne(dpiSodaColl *coll,
            const dpiSodaOperOptions *options, dpiSodaDoc *doc, uint32_t flags,
            bint *replaced, dpiSodaDoc **replacedDoc) nogil

    int dpiSodaColl_saveWithOptions(dpiSodaColl *coll, dpiSodaDoc *doc,
            dpiSodaOperOptions *options, uint32_t flags,
            dpiSodaDoc **savedDoc) nogil

    int dpiSodaColl_truncate(dpiSodaColl *coll) nogil

    int dpiSodaDb_createCollection(dpiSodaDb *db, const char *name,
            uint32_t nameLength, const char *metadata, uint32_t metadataLength,
            uint32_t flags, dpiSodaColl **coll) nogil

    int dpiSodaDb_createDocument(dpiSodaDb *db, const char *key,
            uint32_t keyLength, const char *content, uint32_t contentLength,
            const char *mediaType, uint32_t mediaTypeLength, uint32_t flags,
            dpiSodaDoc **doc) nogil

    int dpiSodaDb_createJsonDocument(dpiSodaDb *db, const char *key,
            uint32_t keyLength, const dpiJsonNode *content, uint32_t flags,
            dpiSodaDoc **doc) nogil

    int dpiSodaDb_getCollectionNames(dpiSodaDb *db,
            const char *startName, uint32_t startNameLength, uint32_t limit,
            uint32_t flags, dpiStringList *names) nogil

    int dpiSodaDb_openCollection(dpiSodaDb *db, const char *name,
            uint32_t nameLength, uint32_t flags, dpiSodaColl **coll) nogil

    int dpiSodaDb_release(dpiSodaDb *db) nogil

    int dpiSodaDoc_getContent(dpiSodaDoc *doc, const char **value,
            uint32_t *valueLength, const char **encoding) nogil

    int dpiSodaDoc_getCreatedOn(dpiSodaDoc *doc, const char **value,
            uint32_t *valueLength) nogil

    int dpiSodaDoc_getIsJson(dpiSodaDoc *doc, bint *isJson) nogil

    int dpiSodaDoc_getJsonContent(dpiSodaDoc *doc, dpiJson **value) nogil

    int dpiSodaDoc_getKey(dpiSodaDoc *doc, const char **value,
            uint32_t *valueLength) nogil

    int dpiSodaDoc_getLastModified(dpiSodaDoc *doc, const char **value,
            uint32_t *valueLength) nogil

    int dpiSodaDoc_getMediaType(dpiSodaDoc *doc, const char **value,
            uint32_t *valueLength) nogil

    int dpiSodaDoc_getVersion(dpiSodaDoc *doc, const char **value,
            uint32_t *valueLength) nogil

    int dpiSodaDoc_release(dpiSodaDoc *doc) nogil

    int dpiSodaDocCursor_close(dpiSodaDocCursor *cursor) nogil

    int dpiSodaDocCursor_getNext(dpiSodaDocCursor *cursor,
            uint32_t flags, dpiSodaDoc **doc) nogil

    int dpiSodaDocCursor_release(dpiSodaDocCursor *cursor) nogil

    int dpiStmt_addRef(dpiStmt *stmt) nogil

    int dpiStmt_bindByName(dpiStmt *stmt, const char *name,
            uint32_t nameLength, dpiVar *var) nogil

    int dpiStmt_bindByPos(dpiStmt *stmt, uint32_t pos, dpiVar *var) nogil

    int dpiStmt_close(dpiStmt *stmt, const char *tag, uint32_t tagLength)

    int dpiStmt_define(dpiStmt *stmt, uint32_t pos, dpiVar *var) nogil

    int dpiStmt_deleteFromCache(dpiStmt *stmt) nogil

    int dpiStmt_execute(dpiStmt *stmt, uint32_t mode,
            uint32_t *numQueryColumns) nogil

    int dpiStmt_executeMany(dpiStmt *stmt, uint32_t mode,
            uint32_t numIters) nogil

    int dpiStmt_fetchRows(dpiStmt *stmt, uint32_t maxRows,
            uint32_t *bufferRowIndex, uint32_t *numRowsFetched,
            bint *moreRows) nogil

    int dpiStmt_getBatchErrorCount(dpiStmt *stmt, uint32_t *count) nogil

    int dpiStmt_getBatchErrors(dpiStmt *stmt, uint32_t numErrors,
            dpiErrorInfo *errors) nogil

    int dpiStmt_getBindCount(dpiStmt *stmt, uint32_t *count) nogil

    int dpiStmt_getBindNames(dpiStmt *stmt, uint32_t *numBindNames,
            const char **bindNames, uint32_t *bindNameLengths) nogil

    int dpiStmt_getImplicitResult(dpiStmt *stmt,
            dpiStmt **implicitResult) nogil

    int dpiStmt_getNumQueryColumns(dpiStmt *stmt,
            uint32_t *numQueryColumns) nogil

    int dpiStmt_getInfo(dpiStmt *stmt, dpiStmtInfo *info) nogil

    int dpiStmt_getLastRowid(dpiStmt *stmt, dpiRowid **rowid) nogil

    int dpiStmt_getOciAttr(dpiStmt *stmt, uint32_t attribute,
            dpiDataBuffer *value, uint32_t *valueLength) nogil

    int dpiStmt_getQueryInfo(dpiStmt *stmt, uint32_t pos,
            dpiQueryInfo *info) nogil

    int dpiStmt_getRowCount(dpiStmt *stmt, uint64_t *count) nogil

    int dpiStmt_getRowCounts(dpiStmt *stmt, uint32_t *numRowCounts,
            uint64_t **rowCounts) nogil

    int dpiStmt_getSubscrQueryId(dpiStmt *stmt, uint64_t *queryId) nogil

    int dpiStmt_release(dpiStmt *stmt) nogil

    int dpiStmt_scroll(dpiStmt *stmt, uint32_t mode, int32_t offset,
            int32_t rowCountOffset) nogil

    int dpiStmt_setFetchArraySize(dpiStmt *stmt, uint32_t arraySize) nogil

    int dpiStmt_setOciAttr(dpiStmt *stmt, uint32_t attribute, void *value,
            uint32_t valueLength) nogil

    int dpiStmt_setPrefetchRows(dpiStmt *stmt, uint32_t numRows) nogil

    int dpiSubscr_prepareStmt(dpiSubscr *subscr, const char *sql,
            uint32_t sqlLength, dpiStmt **stmt) nogil

    int dpiSubscr_release(dpiSubscr *subscr) nogil

    int dpiVar_getNumElementsInArray(dpiVar *var, uint32_t *numElements) nogil

    int dpiVar_getReturnedData(dpiVar *var, uint32_t pos,
            uint32_t *numElements, dpiData **data) nogil

    int dpiVar_getSizeInBytes(dpiVar *var, uint32_t *sizeInBytes) nogil

    int dpiVar_release(dpiVar *var) nogil

    int dpiVar_setNumElementsInArray(dpiVar *var, uint32_t numElements) nogil

    int dpiVar_setFromBytes(dpiVar *var, uint32_t pos, const char *value,
            uint32_t valueLength) nogil

    int dpiVar_setFromLob(dpiVar *var, uint32_t pos, dpiLob *lob) nogil

    int dpiVar_setFromObject(dpiVar *var, uint32_t pos, dpiObject *obj) nogil

    int dpiVar_setFromStmt(dpiVar *var, uint32_t pos, dpiStmt *stmt) nogil

    int dpiVector_getValue(dpiVector *vector, dpiVectorInfo *info) nogil

    int dpiVector_setValue(dpiVector *vector, dpiVectorInfo *info) nogil
